adds text in front of and behind comments in test case

--- a/test/assets/app.html
+++ b/test/assets/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- broken link -->
+    some actual text<!-- broken link -->
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
@@ -32,7 +32,7 @@
         <!-- 
           hello 
           world 
-        -->
+        -->some actual text
       </p>
     </p>
   </body>
