allow slashes in unquoted attributes

--- a/test/assets/key-val-ws.html
+++ b/test/assets/key-val-ws.html
@@ -11,5 +11,14 @@
 
   =
   null
-          / >
-          
+
+  src
+  =
+  /atlassubbed/atlas-html-stream/
+  >
+<name
+
+  src
+  =
+  /atlassubbed/atlas-html-stream /
+  >
