--- a/test/assets/key-val.html
+++ b/test/assets/key-val.html
@@ -1,1 +1,2 @@
-<name some-key=false another-key=24 a-key=null/>
+<name some-key=false another-key=24 a-key=null src=/atlassubbed/atlas-html-stream/>
+<name src=/atlassubbed/atlas-html-stream />
